# i2c-server

./: .gitignore  Cargo.toml  plot.py
boards/: tcn75a.kicad_sym
boards/tcn75a-qwiic/: sym-lib-table  tcn75a-qwiic.kicad_pcb  tcn75a-qwiic.kicad_pro  tcn75a-qwiic.kicad_sch
client/: Cargo.toml
compress/: Cargo.toml  README.md
compress/src/: lib.rs  stream.rs
server/: Cargo.toml
server/src/: main.rs  samples.rs
src/: main.rs
tcn75a/: CHANGELOG.md  Cargo.toml  README.md
tcn75a/examples/: limits.rs  plot.rs
tcn75a/src/: config.rs  lib.rs  limit.rs  temp.rs
tcn75a/tests/: sample.rs  version-numbers.rs
tcn75a/tests/common/: mod.rs
