[package]
name = "compress"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bitvec]
git = "https://github.com/myrrlyn/bitvec"
branch = "develop"
version = "0.18.0"
default-features = false
