[package]
name = "server"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.4.4"
compress = { path = "../compress" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
hyper = "0.13.7"
slice-deque = "0.3.0"
base64 = "0.12.3"
serde_json = "1.0.56"
serde = "1.0.114"
clap = "~2.27.0"
