[package]
name = "tcn75a"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.2"
modular-bitfield = { git = "https://github.com/Robbepop/modular-bitfield.git", version = "0.6.0" }
fixed = "1.6.0"
fixed-macro = "1.1"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
cfg-if = "0.1.10"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
linux-embedded-hal = "0.3.0"
textplots = "0.5.3"
argh = "0.1.3"
indicatif = "0.15.0"
serde_json = "1.0.58"
crossterm = "0.19.0"
