[package]
name = "tcn75a"
version = "0.2.0-alpha.1"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cr1901/i2c-server/tree/master/tcn75a"
description = "Embedded HAL driver for accessing TCN75A temperature sensors"
categories = ["embedded", "no-std"]
keywords = ["temperature", "sensor", "tcn75a", "embedded-hal", "hal"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.8"
modular-bitfield = "0.11.0"
fixed = "1.6.0"
fixed-macro = "1.1"

[dev-dependencies]
embedded-hal-mock = { git = "https://github.com/Mousius/embedded-hal-mock", branch = "1-alpha", version = "0.8.0" }
cfg-if = "0.1.10"
version-sync = "0.9"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
crossterm = "0.19.0"
linux-embedded-hal = { git = "https://github.com/kelnos/linux-embedded-hal", branch = "embedded-hal-1.0.0-alpha.8", version = "0.4.0-alpha.2" }
textplots = "0.5.3"
argh = "0.1.3"
indicatif = "0.15.0"
serde_json = "1.0.58"
eyre = "0.6.5"
